active indicator ui WIP

--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="risk_monitoring">Risk Monitoring</string>
     <string name="active">ACTIVE</string>
     <string name="archived">ARCHIVED</string>
+    <string name="next_update">Next update</string>
 
 
 </resources>
