--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -87,5 +87,8 @@
     <string name="date_format">dd/mm/yyyy</string>
     <string name="title_activity_indicator_log">IndicatorLogActivity</string>
     <string name="status">Status:</string>
+    <string name="edit_message">Edit message</string>
+    <string name="delete">Delete</string>
+    <string name="edit_indicator">Edit indicator</string>
 
 </resources>
