--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -89,4 +89,12 @@
     <string name="status">Status:</string>
     <string name="text_update_alert">Update Alert</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="text_green">Green</string>
+    <string name="text_amber">Amber</string>
+    <string name="text_red">Red</string>
+    <string name="text_info">Cras quis nulla commodo, aliquam lectus sed, blandit augue. Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta</string>
+    <string name="txt_alert_level">Alert Level</string>
+
 </resources>
