--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -93,5 +93,11 @@
     <string name="country_context">Country Context</string>
     <string name="enter_password_error">Please enter your password.</string>
     <string name="enter_email_error">Please enter your email.</string>
+    <string name="select_hazard_title">Select Hazard</string>
+    <string name="alert_level">Alert Level</string>
+    <string name="estimated_peeps">Estimated population effected</string>
+    <string name="effected_area">Add affected area</string>
+    <string name="info_sources">Information sources and notes</string>
+    <string name="add_another_area">Add another affected area</string>
 
 </resources>
