--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -64,6 +64,7 @@
     <string name="title_activity_select_area">SelectAreaActivity</string>
     <string name="no_indicators_have_been_added">No indicators have been added</string>
     <string name="update">Update</string>
+    <string name="update_alert">Update Alert</string>
     <string name="edit">Edit</string>
     <string name="information_source">Information Source</string>
     <string name="indicator_log">Indicator Log</string>
