--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -123,5 +123,7 @@
     <string name="txt_approve">Approve</string>
     <string name="txt_reject">Reject</string>
     <string name="txt_req_red_alert">Red alert requested</string>
+    <string name="txt_reason_for_red">A reason for red alert is required to request a red alert, please enter and try again</string>
+    <string name="txt_cannot_change_hazard">You cannot change the hazard when updating alerts</string>
 
 </resources>
