--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -140,5 +140,6 @@
     <string name="txt_red_requested">Red alert requested</string>
     <string name="txt_cd_red_request">Red alert request requires your action</string>
     <string name="response_plans">Respone Plans</string>
+    <string name="green_alert_text">Green Alert</string>
 
 </resources>
