--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -141,5 +141,5 @@
     <string name="txt_cd_red_request">Red alert request requires your action</string>
     <string name="response_plans">Respone Plans</string>
     <string name="green_alert_text">Green Alert</string>
-
+    <string name="title_min_preparedness">Min. Preparedness</string>
 </resources>
