--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -173,4 +173,9 @@
     <string name="txt_confirm">CONFIRM</string>
     <string name="txt_completion_note">Add a completion note (required)</string>
     <string name="txt_add_attachments">+ Add attachments (required)</string>
+    <string name="txt_take_photo">Take photo</string>
+    <string name="txt_take_video">Take video</string>
+    <string name="txt_select_file">Select file</string>
+    <string name="txt_err_complete_action_note">A completion note is required to complete this action. Please enter and try again</string>
+    <string name="txt_err_add_attachments">An attachment is required to complete this action. Please enter and try again</string>
 </resources>
