mostly finish network level approval for alerts

--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -172,4 +172,6 @@
     <string name="txt_attachments">Attachments</string>
     <string name="all_networks">All Networks</string>
     <string name="all_agencies">All Agencies</string>
+    <string name="network">Network</string>
+    <string name="country">Country</string>
 </resources>
