--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -185,4 +185,7 @@
     <string name="title_adv_preparedness">Adv. Preparedness</string>
     <string name="txt_assign_action">Assign action</string>
     <string name="txt_edit_action">Edit action</string>
+    <string name="network">Network</string>
+    <string name="country">Country</string>
+    <string name="no_programmes">There are no programmes in this region</string>
 </resources>
