--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -131,7 +131,7 @@
     <string name="txt_req_red_alert">Red alert requested</string>
     <string name="txt_reason_for_red">A reason for red alert is required to request a red alert, please enter and try again</string>
     <string name="txt_cannot_change_hazard">You cannot change the hazard when updating alerts</string>
-    <string name="complete">%s Complete</string>
+    <string name="complete">%s%% Complete</string>
     <string name="waiting_approval">Waiting for approval</string>
     <string name="in_progress">In Progress</string>
     <string name="approved">Approved</string>
