--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -189,4 +189,5 @@
     <string name="txt_assign_action">Assign action</string>
     <string name="txt_edit_action">Edit action</string>
     <string name="navbar_subtitle">%s for %s, %s</string>
+    <string name="no_network_tasks">You don\'t have any network tasks</string>
 </resources>
