refactor MPA/APA to get from multiple networks

--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -232,4 +232,5 @@
     <string name="attachments">Attachments</string>
     <string name="download">Download</string>
     <string name="online_error">You need to be online to perform this action</string>
+    <string name="archived_title">Archived</string>
 </resources>
