fix hazard not showing bug

--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -233,4 +233,5 @@
     <string name="download">Download</string>
     <string name="online_error">You need to be online to perform this action</string>
     <string name="archived_title">Archived</string>
+    <string name="no_indicators">There are no indicators associated with this hazard</string>
 </resources>
