--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -188,7 +188,7 @@
     <string name="txt_assign_action">Assign action</string>
     <string name="txt_edit_action">Edit action</string>
     <string name="navbar_subtitle">%s for %s, %s</string>
-    <string name="no_network_tasks">You don\'t have any network tasks</string>
+    <string name="no_network_tasks">You don\'t have any network task</string>
     <string name="txt_needs_done">What needs to be done?</string>
     <string name="txt_hazard_association">Hazard Association</string>
     <string name="txt_department">Department</string>
