fix a bunch of bugs for APA/MPA

--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -238,4 +238,5 @@
     <string name="no_indicators">There are no indicators associated with this hazard</string>
     <string name="add_attachment_not_required">+ Add attachments</string>
     <string name="attachment_required_error">An attachment is required to complete this action</string>
+    <string name="unassigned_title">Unassigned</string>
 </resources>
