--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -249,4 +249,5 @@
     <string name="permission_edit_indicator">You dont have permission to edit this indicator</string>
     <string name="note_cannot_be_empty">Note cannot be empty</string>
     <string name="play_service_error">You must update Google Play Services before logging in</string>
+    <string name="requires_submission">Requires Submission</string>
 </resources>
