--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -256,4 +256,5 @@
     <string name="needs_completing_this_week">A %s preparedness action needs to be completed this week</string>
     <string name="needs_completing_today">needs to be completed today</string>
     <string name="was_due_on">An %s preparedness action was due on <strong> %s </strong></string>
+    <string name="inactive_title">Inactive</string>
 </resources>
