--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -258,4 +258,5 @@
     <string name="was_due_on">An %s preparedness action was due on <strong> %s </strong></string>
     <string name="inactive_title">Inactive</string>
     <string name="all_hazards">All Hazards</string>
+    <string name="more_info_chs">The action needs more information from the web portal</string>
 </resources>
