--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -132,7 +132,7 @@
     <string name="txt_cannot_change_hazard">You cannot change the hazard when updating alerts</string>
     <string name="complete">%d%% Complete</string>
     <string name="waiting_approval">Waiting for approval</string>
-    <string name="in_progress">In Progress</string>
+    <string name="in_progress_title">In Progress</string>
     <string name="approved">Approved</string>
     <string name="needs_reviewing">Needs reviewing</string>
     <string name="last_updated_f">Last updated: %s</string>
@@ -304,6 +304,10 @@
     <string name="action_type_custom">Custom</string>
     <string name="due_on">Due: %s</string>
     <string name="not_assigned">Not Assigned</string>
+    <string name="full_name">%s %s</string>
+    <string name="usd_formatted">$%d</string>
+    <string name="expired_title">Expired</string>
+    <string name="completed_title">Completed</string>
 
 
 </resources>
