Bottom sheet ui complete

--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -165,9 +165,9 @@
     <string name="curreny_pas_incorrect_error">Your current password is incorrect. Please try again</string>
     <string name="passwords_dont_match_temp_error">Passwords don\'t match</string>
     <string name="couldnt_update_password_error">Could not update password at this time, please ensure you have a data connection and try again</string>
-    <string name="txt_complete_action">Complete action</string>
-    <string name="txt_reassign_action">Reassign action</string>
-    <string name="txt_action_notes">Action notes</string>
+    <string name="complete_action">Complete action</string>
+    <string name="reassign_action">Reassign action</string>
+    <string name="notes_action">Action notes</string>
     <string name="txt_attachments">Attachments</string>
     <string name="all_networks">All Networks</string>
     <string name="all_agencies">All Agencies</string>
@@ -176,17 +176,17 @@
     <string name="no_programmes">There are no programmes in this region</string>
     <string name="txt_confirm">CONFIRM</string>
     <string name="txt_completion_note">Add a completion note (required)</string>
-    <string name="txt_add_attachments">+ Add attachments (required)</string>
+    <string name="attachments_action">+ Add attachments (required)</string>
     <string name="txt_take_photo">Take photo</string>
     <string name="txt_take_video">Take video</string>
     <string name="txt_select_file">Select file</string>
     <string name="txt_err_complete_action_note">A completion note is required to complete this action. Please enter and try again</string>
     <string name="txt_err_add_attachments">An attachment is required to complete this action. Please enter and try again</string>
     <string name="txt_note_not_empty">Notes cannot be empty!</string>
-    <string name="txt_update_due_date">Update due date</string>
+    <string name="update_due_date_action">Update due date</string>
     <string name="title_adv_preparedness">Adv. Preparedness</string>
-    <string name="txt_assign_action">Assign action</string>
-    <string name="txt_edit_action">Edit action</string>
+    <string name="assign_action">Assign action</string>
+    <string name="action_edit">Edit action</string>
     <string name="navbar_subtitle">%s for %s, %s</string>
     <string name="no_network_tasks">You don\'t have any network task</string>
     <string name="task_empty">You have no tasks that need completing this week</string>
