--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -296,7 +296,7 @@
     <string name="amber">amber</string>
     <string name="red">red</string>
     <string name="task_action_due_passed">A %s preparedness action was due on %s</string>
-    <string name="task_action_due_today">A %s preparedness action neds to be completed today</string>
+    <string name="task_action_due_today">A %s preparedness action needs to be completed today</string>
     <string name="task_action_due_week">A %s preparedness action needs to be completed this week</string>
     <string name="task_approval">A response plan has been submitted for approval</string>
     <string name="action_type_chs">CHS</string>
