--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -398,8 +398,8 @@
     <string name="select_level_1_error">Please select a level 1 value first</string>
     <string name="select_level_2_error">Please select a level 2 value first</string>
     <string name="select_country_error">Please select a country first</string>
-    <string name="progrmme_results">Programme Results</string>
     <string name="results_for">Results for: %s%s %s</string>
+    <string name="programme_results_for">Results for: %s</string>
 
     <string name="title_min_preparedness">Min. Preparedness</string>
     <string name="change_password">Change Password</string>
@@ -572,6 +572,10 @@
     <string name="sector_protection">Protection</string>
     <string name="sector_camp_management">Camp Management</string>
     <string name="sector_other">Other</string>
+    <string name="programme_to">To: %s</string>
+    <string name="programme_from">From: %1$td/%1$tm/%1$ty - %2$td/%2$tm/%2$ty</string>
+    <string name="programme_in">In: %s</string>
+    <string name="programme_results">Programme Results</string>
 
 
 </resources>
