--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -359,7 +359,7 @@
     <string name="text_amber">Amber</string>
     <string name="text_red">Red</string>
     <string name="text_info">Cras quis nulla commodo, aliquam lectus sed, blandit augue. Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta</string>
-    <string name="txt_alert_level">Alert Level</string>
+    <string name="tvAlertLevel">Alert Level</string>
     <string name="txt_affected_area">Affected area</string>
     <string name="txt_save">SAVE</string>
     <string name="txt_country">Country</string>
@@ -379,7 +379,8 @@
     <string name="info_and_notes">Information sources and notes:</string>
     <string name="txt_approve">Approve</string>
     <string name="txt_reject">Reject</string>
-    <string name="txt_req_red_alert">Red alert requested</string>
+    <string name="red_alert_requested">Red alert requested</string>
+    <string name="red_alert_requested_action_required">Red alert request requires your action</string>
     <string name="txt_reason_for_red">A reason for red alert is required to request a red alert, please enter and try again</string>
     <string name="txt_cannot_change_hazard">You cannot change the hazard when updating alerts</string>
     <string name="complete">%d%% Complete</string>
@@ -388,8 +389,6 @@
     <string name="approved">Approved</string>
     <string name="needs_reviewing">Needs reviewing</string>
     <string name="last_updated_f">Last updated: %s</string>
-    <string name="txt_red_requested">Red alert requested</string>
-    <string name="txt_cd_red_request">Red alert request requires your action</string>
     <string name="response_plans">Respone Plans</string>
     <string name="green_alert_text">Green Alert</string>
     <string name="my_country">My Country</string>
@@ -427,7 +426,7 @@
     <string name="no_programmes">There are no programmes in this region</string>
     <string name="txt_confirm">CONFIRM</string>
     <string name="txt_completion_note">Add a completion note (required)</string>
-    <string name="txt_add_attachments">+ Add attachments (required)</string>
+    <string name="tvNumOfPeople">+ Add attachments (required)</string>
     <string name="attachments_action">@string/attachments</string>
     <string name="txt_take_photo">Take photo</string>
     <string name="txt_take_video">Take video</string>
@@ -576,6 +575,11 @@
     <string name="programme_from">From: %1$td/%1$tm/%1$ty - %2$td/%2$tm/%2$ty</string>
     <string name="programme_in">In: %s</string>
     <string name="programme_results">Programme Results</string>
+    <string name="hazard_other">Other</string>
+    <plurals name="alert_population">
+        <item quantity="one">%,d people affected in %d area</item>
+        <item quantity="other">%,d people affected in %d areas</item>
+    </plurals>
 
 
 </resources>
