--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -576,6 +576,8 @@
     <string name="programme_in">In: %s</string>
     <string name="programme_results">Programme Results</string>
     <string name="hazard_other">Other</string>
+    <string name="review_plan">Review plan</string>
+    <string name="review_plan_content">Please log in to the web portal to review this plan.</string>
     <plurals name="alert_population">
         <item quantity="one">%,d people affected in %d area</item>
         <item quantity="other">%,d people affected in %d areas</item>
